--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,29 @@
-<div class="name" *ngFor="let todo of todos">
-{{todo.title}}
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="todolist not-done">
+             <h1>Todos</h1>
+                <input type="text" class="form-control add-todo" placeholder="Add todo">
+                    <button id="checkAll" class="btn btn-success">Mark all as done</button>
+
+                    <hr>
+                    <ul id="sortable" class="list-unstyled">
+                    <li class="ui-state-default" *ngFor="let todo of todos" >
+                        <div class="checkbox" >
+                            <label>
+                                <input type="checkbox" [checked]="todo.completed" />
+
+                                {{todo.title}}</label>
+                        </div>
+                    </li>
+
+                </ul>
+                <div class="todo-footer">
+                    <strong><span class="count-todos"></span></strong> Items Left
+                </div>
+            </div>
+        </div>
+
 </div>
